packages/easy-coding-standard/tests/Error/ErrorCollector/SniffRunnerSource/CodeWithWarningSniff.php.inc
<?php

class Example
{
    public function method($x)
    {
        for (;true;) true; // No Init or Update part, may as well be: while (true)
    }
}

